Fix cart spacing

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  // justify-content: center;
   gap: 10px;
   position: fixed;
   overflow: auto;
@@ -14,7 +15,7 @@
   background-color: rgba(8, 19, 41, 0.9);
   min-width: 35%;
   min-height: 20%;
-  max-height: 75%;
+  max-height: 70%;
   color: white;
   transform-origin: 100%;
   transform: scaleX(0);
@@ -28,6 +29,11 @@
     align-items: center;
     gap: 5%;
     justify-content: space-between;
+    text-align: center;
+
+    *{
+      min-width: 22%;
+    }
   }
 
 }
@@ -37,7 +43,7 @@
   transition: transform 0.5s ease-in;
 }
 
-@media (max-width: 450px){
+@media (max-width: 500px){
   .cart-container{
     top: 13vh;
     min-width: 50%;
